--- a/templates/about.html
+++ b/templates/about.html
@@ -80,13 +80,13 @@ About - TunnelVision
                         design, and the semiotics of our spaces. The final project for the class was to create
                         a map of a place or experience and to create the map so that it might impact your
                         community or change people's views on a subject. <i>TunnelVision: RIT's Overlooked Art
-                            Museum</i> came out of that class as an experiential map and catalog of the murals in the
+                        Museum</i> came out of that class as an experiential map and catalog of the murals in the
                         tunnels.
                     </p>
                     <p>
-                        student in the course was Kasim O'Meally, a Resident Advisor for the Center for Residence
+                        Another student in the course was Kasim O'Meally, a Resident Advisor for the Center for Residence
                         Life (who oversees the current process for creating murals). Wilson and Kasim went
-                        through many archival documents from ResLife. They uncovered a photo album from when the
+                        through many archival documents from Residence Life. They uncovered a photo album from when the
                         now-defunct Residence Hall Association, who oversaw the murals, performed an inventory of the
                         murals. Though the quality of these photos is poor, all of the lost murals were scanned at the
                         RIT Archives and uploaded to <i>TunnelVision</i> with the tag <a
