Added TVC and HARTS websites to Open Canvas Page

--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -151,14 +151,14 @@ Open Canvas - TunnelVision
                 class="accordion-collapse collapse"
             ><div class="accordion-body">
                 <p>
-                    House of the Arts is a special interest house on campus, and
+                    <a href="https://harts.student.rit.edu/">House of the Arts</a> is a special interest house on campus, and
                     is the combined art-focused group from the previous Art
                     House and Photo House. It aims to facilitate art of all
                     forms, and develop a safe, connected group of artistically
                     driven people.
                 </p>
                 <p>
-                    Tunnel Visionaries is a club focused on appreciating the
+                    <a href="https://campusgroups.rit.edu/TVC/home/">Tunnel Visionaries</a> is a club focused on appreciating the
                     many murals found in the tunnel systems of RIT and
                     advocating for their preservation, as well as the many
                     murals found around the Rochester region. Combining its art
